--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,126 @@
-.App {
-  text-align: center;
+body {
+  font-family: 'Mulish', sans-serif; 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1, h2, h3 {
+  font-family: 'Gravitas One', cursive;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h2 {
+  color: rgb(255, 0, 212);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+h5 {
+  font-weight: bold;
+}
+
+header h2 {
+  color: rgb(255, 0, 212);
+}
+
+.site-footer{
+  background-image: linear-gradient(white, rgb(236, 61, 207));
+  padding: 100px 0;
+}
+
+.jumbotron {
+  margin: 0;
+  padding: 30px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.row-content {
+  padding: 15px 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar {
+  background-color: #a8f0b1;    
+}
+
+.navbar-nav .nav-item .nav-link {
+  color: rgb(255, 0, 212);
+}
+
+.nav-item {
+  padding: 3px;
+}
+
+.nav-item.active, .nav-item:hover {
+  border-radius: 5px;
+  background-color:rgb(255, 0, 212);  
+  color: white;
+}
+
+.nav-item > .nav-link.active {
+  background-color:rgb(255, 0, 212);  
+  color: white;
+}
+
+/* Booking button */
+.navbar-text {
+  border-radius: 5px;
+  padding: 10px;
+  background-color:#c507f5;
+}
+
+.tab-content {
+  border: solid rgb(255, 0, 212);   
+  border-radius: 5px; 
+  padding: 15px;
+}
+
+a, a:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
+.carousel-caption {
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+}
+
+.carousel {
+  border: solid rgb(255, 0, 212);
+}
+
+.card {
+  background: #fff;
+  border-radius: 0.6em;
+  margin: 1em;
+  overflow: hidden;
+  cursor: pointer;
+  box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25), 0 8px 16px -8px hsla(0, 0%, 0%, 0.3), 0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
+  transition: all ease 200ms;
+}
+
+.card:hover {
+  transform: scale(1.03);
+  box-shadow: 0 13px 40px -5px hsla(240, 30.1%, 28%, 0.12), 0 8px 32px -8px hsla(0, 0%, 0%, 0.14), 0 -6px 32px -6px hsla(0, 0%, 0%, 0.02);
+}
+
+.card-header, .modal-header {
+  color: white;
+  background-color:rgb(255, 0, 212);
+}
+
+img.zoom {
+  width: 100%;
+  height: 200px;
+  border-radius:5px;
+  object-fit:cover;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  -ms-transition: all .3s ease-in-out;
+}      
+
+.transition {
+  -webkit-transform: scale(1.2); 
+  -moz-transform: scale(1.2);
+  -o-transform: scale(1.2);
+  transform: scale(1.2);
+}
+
+.row-gallery {
+  padding: 10px 0px 40px 0px;
 }
